# BambuPrinterGateway

./: .env.example  .gitignore  Plan.md  README.md  pyproject.toml  test.gcode.3mf
deploy/: printer-queue.service.example
src/bambu_printer_gateway/: __init__.py  database.py  gateway.py  jobs.py  phase0.py  web.py
src/bambu_printer_gateway/static/: admin.html  admin.js  app.js  index.html  styles.css
tests/: __init__.py  test_admin_start.py  test_gateway.py  test_phase0.py  test_queue.py  test_web.py
