[project]
name = "bambu-printer-gateway"
version = "0.1.0"
description = "Bambu printer gateway technical validation"
requires-python = ">=3.12,<3.13"
dependencies = [
    "bambu-connect @ git+https://github.com/mattcar15/bambu-connect.git@56749e16c8e4dffeba878a139db1cefa8858abcc",
    "paho-mqtt>=2,<3",
]

[project.scripts]
bambu-phase0 = "bambu_printer_gateway.phase0:main"
bambu-gateway-monitor = "bambu_printer_gateway.gateway:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/bambu_printer_gateway"]

[tool.hatch.metadata]
allow-direct-references = true
